<resources>
    <string name="app_name">Lab2</string>
    <string name="login_prompt">Please log in to use application</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="hint_usernam">enter your username</string>
    <string name="hint_password">enter your password</string>
    <string name="login">Login</string>
    <string name="signup_prompt">Don\'t have an account?\nSign Up</string>
    <string name="registration_prompt">Fill in the following information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="activity_create_title">Title</string>
    <string name="activity_create_description">Description</string>
    <string name="activity_create_mark_as_important">Mark as important</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
</resources>
