<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/white_color">

    <View
        android:id="@+id/item_view"
        android:layout_width="20dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"/>
    
    <TextView
        android:id="@+id/item_title"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/activity_create_title"
        android:textSize="20sp"
        android:textColorHint="@color/hint_color"
        android:layout_alignTop="@id/item_view"
        android:layout_toEndOf="@id/item_view"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/item_description"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:hint="@string/activity_create_description"
        android:textSize="20sp"
        android:textColorHint="@color/hint_color"
        android:layout_toEndOf="@id/item_view"
        android:layout_below="@id/item_title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <CheckBox
        android:id="@+id/item_important_check"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_alignBaseline="@id/item_title"
        android:layout_toEndOf="@id/item_description"/>

    <TextView
        android:id="@+id/item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:textColorHint="@color/hint_color"
        android:textSize="18sp"
        android:layout_below="@+id/item_description"
        android:layout_alignEnd="@+id/item_description" />

    <View
        android:id="@+id/item_devide_view"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/item_date"

        android:background="@color/text_color"
        />




</RelativeLayout>